# waverider

./: .gitignore  LICENSE  Makefile  README.md  cookiecutter.json  pyproject.toml  quick_test.py  run_tests.py  test-requirements.txt  test_cookiecutter.py  tox.ini  validate_template.py
.github/: copilot-instructions.md
.github/workflows/: dependency-update.yml  test-template.yml
hooks/: post_gen_project.py
tests/: __init__.py  quick_test.py  run_tests.py  test_cookiecutter.py
{{ cookiecutter.project_slug }}/: .env.example  .env.oauth2.example  .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  docker-compose.yml  manage.py  pyproject.toml
{{ cookiecutter.project_slug }}/.github/workflows/: django-ci.yml
{{ cookiecutter.project_slug }}/requirements/: base.txt  local.txt  production.txt
{{ cookiecutter.project_slug }}/{{ cookiecutter.project_slug }}/: asgi.py  celery.py  urls.py  wsgi.py
{{ cookiecutter.project_slug }}/{{ cookiecutter.project_slug }}/accounts/: __init__.py  admin.py  api.py  apps.py  schemas.py
{{ cookiecutter.project_slug }}/{{ cookiecutter.project_slug }}/accounts/api/: __init__.py  auth.py  oauth2.py  schemas.py  users.py
{{ cookiecutter.project_slug }}/{{ cookiecutter.project_slug }}/accounts/oauth2/: __init__.py  api.py  providers.py  schemas.py  utils.py
{{ cookiecutter.project_slug }}/{{ cookiecutter.project_slug }}/accounts/tests/: __init__.py  test_api.py  test_api_package.py
{{ cookiecutter.project_slug }}/{{ cookiecutter.project_slug }}/settings/: base.py  local.py  production.py
